--- a/Arcade.vcxproj
+++ b/Arcade.vcxproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ClInclude Include="imports.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="VisibleObject.h" />
@@ -29,6 +30,7 @@
     <ClCompile Include="14_animated_sprites_and_vsync.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="VisibleObject.cpp" />
