optimized resource manager.

--- a/Arcade.vcxproj
+++ b/Arcade.vcxproj
@@ -88,23 +88,23 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\lib\SDL2_image-2.0.5\include;C:\lib\SDL2-2.0.14\include;C:\lib\SDL2-2.0.14\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\lib\SDL2_image-2.0.5\lib\x64;C:\lib\SDL2-2.0.14\lib\x64;C:\lib\SDL2-2.0.14\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\lib\soloud20200207\include;C:\lib\SDL2_image-2.0.5\include;C:\lib\SDL2-2.0.14\include;C:\lib\SDL2-2.0.14\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\lib\soloud20200207\lib;C:\lib\SDL2_image-2.0.5\lib\x86;C:\lib\SDL2-2.0.14\lib\x86;C:\lib\SDL2-2.0.14\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\lib\SDL2_image-2.0.5\include;C:\lib\SDL2-2.0.14\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
-    <LibraryPath>C:\lib\SDL2_image-2.0.5\lib\x64;C:\lib\SDL2-2.0.14\lib\x64;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86)</LibraryPath>
+    <IncludePath>C:\lib\soloud20200207\include;C:\lib\SDL2_image-2.0.5\include;C:\lib\SDL2-2.0.14\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>C:\lib\soloud20200207\lib;C:\lib\SDL2_image-2.0.5\lib\x86;C:\lib\SDL2-2.0.14\lib\x86;$(VC_LibraryPath_x86);$(WindowsSDK_LibraryPath_x86)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\lib\SDL2_image-2.0.5\include;C:\lib\SDL2-2.0.14\include;C:\lib\SDL2-2.0.14\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\lib\SDL2_image-2.0.5\lib\x64;C:\lib\SDL2-2.0.14\lib\x64;C:\lib\SDL2-2.0.14\lib\x64;$(LibraryPath)</LibraryPath>
+    <IncludePath>C:\lib\soloud20200207\include;C:\lib\SDL2_image-2.0.5\include;C:\lib\SDL2-2.0.14\include;C:\lib\SDL2-2.0.14\include;$(IncludePath)</IncludePath>
+    <LibraryPath>C:\lib\soloud20200207\build\vs2019\x64\Release;C:\lib\soloud20200207\lib;C:\lib\SDL2_image-2.0.5\lib\x64;C:\lib\SDL2-2.0.14\lib\x64;C:\lib\SDL2-2.0.14\lib\x64;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>C:\lib\SDL2_image-2.0.5\include;C:\lib\SDL2-2.0.14\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
-    <LibraryPath>C:\lib\SDL2_image-2.0.5\lib\x64;C:\lib\SDL2-2.0.14\lib\x64;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
+    <IncludePath>C:\lib\soloud20200207\include;C:\lib\SDL2_image-2.0.5\include;C:\lib\SDL2-2.0.14\include;$(VC_IncludePath);$(WindowsSDK_IncludePath);</IncludePath>
+    <LibraryPath>C:\lib\soloud20200207\build\vs2019\x64\Release;C:\lib\soloud20200207\lib;C:\lib\SDL2_image-2.0.5\lib\x64;C:\lib\SDL2-2.0.14\lib\x64;$(VC_LibraryPath_x64);$(WindowsSDK_LibraryPath_x64)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -116,7 +116,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;Shell32.lib</AdditionalDependencies>
+      <AdditionalDependencies>soloud.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;Shell32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -133,7 +133,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;Shell32.lib</AdditionalDependencies>
+      <AdditionalDependencies>soloud.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;Shell32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -146,7 +146,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;Shell32.lib</AdditionalDependencies>
+      <AdditionalDependencies>soloud_static.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;Shell32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -163,7 +163,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;Shell32.lib</AdditionalDependencies>
+      <AdditionalDependencies>soloud_static.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;Shell32.lib</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
